deploy/retrieveUnpackaged/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <fields>
        <fullName>Account_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Account_Sales__c = 0 , 1,   (  Plan_FY_Account_Sales_Goal__c  - Last_FY_Account_Sales__c  ) /  Last_FY_Account_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Type_del__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>R00N50000001oQ12EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_Num__c</fullName>
        <formula>Account__r.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_new_projects_you_need_help_with__c</fullName>
        <inlineHelpText>Do you have any new projects that you would like our help with?</inlineHelpText>
        <label>Any new projects you need help with?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <inlineHelpText>Please list the applications currently utilized at this organization.</inlineHelpText>
        <label>Applications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Areas_of_Concern__c</fullName>
        <inlineHelpText>What should we look out for to avoid specifically. Hot spots / red flags, etc....</inlineHelpText>
        <label>Areas of Concern</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Areas_of_Improvement__c</fullName>
        <label>Areas of Improvement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aspects_of_Business_involving_RS__c</fullName>
        <inlineHelpText>Do they have several aspects of their business that RS will be involved with?</inlineHelpText>
        <label>Aspects of Business involving RS?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <inlineHelpText>Have organizational stakeholders committed to attend?</inlineHelpText>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Backup_Differentials__c</fullName>
        <label>Backup Differentials</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmetered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - 60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 - 90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 - 120 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 120 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Instructions__c</fullName>
        <inlineHelpText>What do we need to do to facilitate payment?</inlineHelpText>
        <label>Billing Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description_of_Outcome_of_Workshop__c</fullName>
        <label>Brief Description of Outcome of Workshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>Has this organization budgeted for a Hosted computing project, private cloud, or feasibility study within the next twelve months?</inlineHelpText>
        <label>Budget</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Account_Goals__c</fullName>
        <inlineHelpText>(i.e. grow MRR by 10?, win back office business, etc)</inlineHelpText>
        <label>Business Account Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_1_Available_to_Outsource__c</fullName>
        <label>Business Unit 1 % Available to Outsource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit_1_Decison_Maker__c</fullName>
        <label>Business Unit 1 Decison Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Business Unit 1 Decison Maker)</relationshipLabel>
        <relationshipName>Acct_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_1_Name__c</fullName>
        <label>Business Unit 1 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_1_Wallet__c</fullName>
        <label>Business Unit 1 % Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit_2_Available_to_Outsource__c</fullName>
        <label>Business Unit 2 % Available to Outsource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit_2_Decison_Maker__c</fullName>
        <label>Business Unit 2 Decison Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Business Unit 2 Decison Maker)</relationshipLabel>
        <relationshipName>Acct_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_2_Name__c</fullName>
        <label>Business Unit 2 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_2_Wallet__c</fullName>
        <label>Business Unit 2 % Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit_3_Available_to_Outsource__c</fullName>
        <label>Business Unit 3 % Available to Outsource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Unit_3_Decison_Maker__c</fullName>
        <label>Business Unit 3 Decison Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Business Unit 3 Decison Maker)</relationshipLabel>
        <relationshipName>Acct_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_3_Name__c</fullName>
        <label>Business Unit 3 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_3_Wallet__c</fullName>
        <label>Business Unit 3 % Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CA_Cloud_Specialist_Assigned__c</fullName>
        <label>CA/Cloud Specialist Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMRR__c</fullName>
        <formula>Account__r.CMRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Scheduled_Date_Time__c</fullName>
        <label>Call Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Used__c</fullName>
        <label>Campaign Used</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux ES4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux 5 – 64-bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT1 DC Logical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT1 DC Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT2 DC Logical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT2 DC Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slicehost 1 Marketo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team A6 NPS Detractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win2K8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win2K3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Certifications_Required__c</fullName>
        <label>Certifications Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloud_Account_Number__c</fullName>
        <label>Cloud Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Adoption_Openstack__c</fullName>
        <label>Cloud Adoption/Openstack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloud_Free_Trial_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud Free Trial Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Virtualization_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloud/Virtualization Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <inlineHelpText>Is there a compelling event driving interest in Hosting (e.g. data center upgrade or migration project)? Consolidation or app modernization/rationalization initiative?</inlineHelpText>
        <label>Compelling Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_to_Remove__c</fullName>
        <label>Competitor to Remove</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Configuration_growth_over_time__c</fullName>
        <label>Configuration growth over time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date_s__c</fullName>
        <label>Contract Renewal Date(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Sign_Off__c</fullName>
        <inlineHelpText>Who is the decision maker who signed off on deal?</inlineHelpText>
        <label>Contract Sign Off</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Contract Sign Off)</relationshipLabel>
        <relationshipName>R00N50000001oQ4fEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Acct Plans</relationshipLabel>
        <relationshipName>R00N50000001oQGFEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Probability__c</fullName>
        <label>Conversion Probability</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Converted_to_Cloud__c</fullName>
        <label>Converted to Cloud</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Managed Cloud - MCR not involved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - UnManaged Cloud - MCR not involved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Managed Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - UnManaged Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Canceled Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Keeping Dedicated Server</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Sponsor__c</fullName>
        <label>Corporate Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Corporate Sponsor)</relationshipLabel>
        <relationshipName>R00N50000001oQGYEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical_Sites_Overview_Date__c</fullName>
        <label>Critical Sites Overview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_IT_Spend__c</fullName>
        <inlineHelpText>What is customer current IT spend? What % is infrastructure vs. applications?</inlineHelpText>
        <label>Current IT Spend</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Infrastructure__c</fullName>
        <inlineHelpText>Is their IT infrastructure distributed? If so, how many locations? (onsite, hosting provider, collocation?)</inlineHelpText>
        <label>Current Infrastructure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Strategy__c</fullName>
        <inlineHelpText>Does this organization have a current IT Hosting or Cloud Strategy (for next 6 – 12 months)?</inlineHelpText>
        <label>Current Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Technology__c</fullName>
        <inlineHelpText>What technology are they currently utilizing? (traditional hardware, virtual machines – what platform, cloud?)</inlineHelpText>
        <label>Current Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_MOM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom MOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Applications_Supported__c</fullName>
        <label>Customer Applications Supported</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Briefing_Center_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Briefing Center Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_CEO__c</fullName>
        <inlineHelpText>Who runs the company?</inlineHelpText>
        <label>Customer CEO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Customer CEO)</relationshipLabel>
        <relationshipName>R00N50000001oQ4pEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_CIO__c</fullName>
        <label>Customer CIO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Customer CIO)</relationshipLabel>
        <relationshipName>Acct_Plans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Called__c</fullName>
        <label>Customer Called</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Marketo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - SAT1/SAT2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Win2K8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - No Campaign Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Fit_Ticket__c</fullName>
        <inlineHelpText>Ticket Number for Cloud Fit Call</inlineHelpText>
        <label>Customer Fit Ticket</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Limitations__c</fullName>
        <label>Customer Limitations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Opportunities__c</fullName>
        <label>Customer Opportunities</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Strengths__c</fullName>
        <label>Customer Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Threats__c</fullName>
        <label>Customer Threats</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Weaknesses_Challenges__c</fullName>
        <label>Customer Weaknesses/Challenges</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Web_Site__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Web Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_using_Cloud_already__c</fullName>
        <label>Customer using Cloud already</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Managed Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - UnManaged Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_customer_facing_issues__c</fullName>
        <inlineHelpText>what issues does the customer face on a daily basis?</inlineHelpText>
        <label>Daily customer facing issues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decison_Maker__c</fullName>
        <inlineHelpText>Who decides if they stay or leave?</inlineHelpText>
        <label>Decison Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Decison Maker)</relationshipLabel>
        <relationshipName>R00N50000001oQELEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Contact__c</fullName>
        <label>Department Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acct Plans (Department Contact)</relationshipLabel>
        <relationshipName>R00N50000001oQ6REAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_CMRR__c</fullName>
        <label>Device CMRR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Datacenter_Abbr__c</fullName>
        <label>Device Datacenter Abbr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Make_Model__c</fullName>
        <label>Device Make/Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Number__c</fullName>
        <label>Device Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS_Name__c</fullName>
        <label>Device OS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS_Version__c</fullName>
        <label>Device OS Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_OS__c</fullName>
        <label>Device OS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downgrades__c</fullName>
        <inlineHelpText>Number of downgrades per year.</inlineHelpText>
        <label>Downgrades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Assigned__c</fullName>
        <label>EA Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firewall_Audit__c</fullName>
        <label>Firewall Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Firewall_Type__c</fullName>
        <label>Firewall Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_business_or_renewals__c</fullName>
        <inlineHelpText>What do we need to prove to customer to gain future business or renewals?</inlineHelpText>
        <label>Future business or renewals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Growth_Areas__c</fullName>
        <inlineHelpText>What are the growth areas?</inlineHelpText>
        <label>Growth Areas</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Growth_Plan_Overview__c</fullName>
        <label>Growth Plan Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Growth_Plan_Strategy__c</fullName>
        <label>Growth Plan Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <label>Growth</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>High_Risk_Customer__c</fullName>
        <label>High Risk Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosting_Experience__c</fullName>
        <label>Hosting Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosting_Platforms__c</fullName>
        <label>Hosting Platforms</label>
        <picklist>
            <picklistValues>
                <fullName>Hybrid Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Cloud</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_can_we_add_value_to_their_business__c</fullName>
        <inlineHelpText>How can we prove value to the customer on a regular basis?</inlineHelpText>
        <label>How can we add value to their business</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_do_they_make_money_and_grow__c</fullName>
        <label>How do they make money and grow</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_do_they_use_Rackspace__c</fullName>
        <label>How do they use Rackspace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IR_s_Updated__c</fullName>
        <inlineHelpText>Have all IR&apos;s been updated and a regular review put in place?</inlineHelpText>
        <label>IR&apos;s Updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Information__c</fullName>
        <label>Industry Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Trends_Issues_and_Standards__c</fullName>
        <inlineHelpText>Describe the industry, issues, trends and standards.</inlineHelpText>
        <label>Industry, Trends, Issues and Standards</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Influencers__c</fullName>
        <inlineHelpText>Are they able to influence IT strategy? Are they promoters or detractors?</inlineHelpText>
        <label>Influencers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Consolidation__c</fullName>
        <inlineHelpText>Have they gone through a server consolidation and virtualization process internally? If so, did they quantify the efficiencies realized?</inlineHelpText>
        <label>Internal Consolidation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Meeting_Scheduled_Date_Time__c</fullName>
        <label>Internal Meeting Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Private_Cloud__c</fullName>
        <inlineHelpText>Do they want an internal private cloud for applications, data and workloads they do not want outside of their own facilities?</inlineHelpText>
        <label>Internal Private Cloud</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_client_evaluating_a_competitor__c</fullName>
        <inlineHelpText>Has your client notified you they are evaluating a competitor?</inlineHelpText>
        <label>Is client evaluating a competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Business_Problems__c</fullName>
        <label>Key Business Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Client_Sponsor__c</fullName>
        <label>Key Client Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>R00N50000001oQ0vEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Projects_Won__c</fullName>
        <label>Key Projects Won</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Relationship_Strategy__c</fullName>
        <label>Key Relationship Strategy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Case_Study_Date__c</fullName>
        <label>Last Case Study Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Briefing_Date__c</fullName>
        <label>Last Customer Briefing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_FY_Account_Sales__c</fullName>
        <formula>Last_FY_Product_Sales__c  +  Last_FY_Services_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last FY Account Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Product_Sales__c</fullName>
        <label>Last FY Product Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Services_Sales__c</fullName>
        <label>Last FY Services Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Revision__c</fullName>
        <label>Last Plan Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Audit__c</fullName>
        <label>License Audit</label>
        <picklist>
            <picklistValues>
                <fullName>Over Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Paying Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Paying Microsoft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Load_Balancer_Audit__c</fullName>
        <label>Load Balancer Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Load_Balancer_Type__c</fullName>
        <label>Load Balancer Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Memory__c</fullName>
        <label>Memory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_Critical__c</fullName>
        <inlineHelpText>Which of these would be considered mission critical?</inlineHelpText>
        <label>Mission Critical</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Project_Implemented__c</fullName>
        <label>Most Recent Project Implemented</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Type__c</fullName>
        <label>NPS Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Areas_to_Develop__c</fullName>
        <label>New Areas to Develop</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Referrals_and_References__c</fullName>
        <label>Number of Referrals and References</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_VPN_s__c</fullName>
        <label>Number of VPN&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offsite_Tape_Rotation__c</fullName>
        <label>Offsite Tape Rotation</label>
        <picklist>
            <picklistValues>
                <fullName>2 week retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 week retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Source__c</fullName>
        <inlineHelpText>Do they implement open source technologies and support open standards?</inlineHelpText>
        <label>Open Source</label>
        <type>TextArea</type>
    </fields>
</CustomObject>